# gemma-chatbot

./: .env.example  .gitignore  README.md  cost_speed_optimizer.html  gemma27b_capacity_calculator.html  gemma_agentic_mcp_aws_architecture.html  main.py  mlops_aws_inference_architecture.html  pyproject.toml  run.sh
backend/: __init__.py  config.py  errors.py  hardware.py  main.py  metrics.py  model_manager.py  quantization.py  rate_limiter.py  requirements.txt  schemas.py  skills.py  validators.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: Admin.tsx  App.tsx  Chat.tsx  index.css  main.tsx  skills.ts
frontend/src/__tests__/: Admin.test.tsx  Chat.test.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AdminCard.tsx  ErrorBoundary.tsx  MessageBubble.tsx  MessageList.tsx  SkillToggle.tsx  SkillUsageBar.tsx  Toast.tsx  TypingIndicator.tsx
frontend/src/pages/: Admin.tsx  Chat.tsx
frontend/src/stores/: adminStore.ts  chatStore.ts
tests/: conftest.py  test_api.py  test_backend.py  test_classes.py
