[project]
name = "gemma-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-lifespan==2.1.0",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "llama-cpp-python==0.3.8",
    "mlx-lm==0.26.3",
    "psutil==7.0.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "python-dotenv==1.1.1",
    "uvicorn[standard]==0.34.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
